fixtures/grammar/reject/ambiguous-indentation.fm
---
outer:
   value: no
---
Vera Example
